bynkc/tests/fixtures/positive/28_explicit_ok/input.karn
commons test {
  fn always(n: Int) -> Result[Int, ValidationError] {
    Ok(n)
  }
}
