bynkc/tests/fixtures/negative/165_list_fn_at_boundary/input.karn
commons bad {
  type Pipeline = {
    steps: List[Int -> Int],
  }
}
